# cuda-bundle-adjustment

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
include/: cuda_bundle_adjustment.h  cuda_bundle_adjustment_constants.h  cuda_bundle_adjustment_types.h
samples/: CMakeLists.txt  sample_ba_from_file.cpp  sample_comparison_with_g2o.cpp
samples/sample_ba_from_file/: CMakeLists.txt  main.cpp
samples/sample_comparison_with_g2o/: CMakeLists.txt  main.cpp
samples/utility/: object_creator.h
src/: CMakeLists.txt  constants.h  cuda_block_solver.cu  cuda_block_solver.h  cuda_bundle_adjustment.cpp  cuda_linear_solver.cpp  cuda_linear_solver.h  device_buffer.h  device_matrix.h  fixed_vector.h  macro.h  robust_kernel.h  scalar.h  sparse_block_matrix.cpp  sparse_block_matrix.h
